Display share link on 'invite' button click.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,8 @@
 
     $("#player-2").click(showShareLink);
 
+    document.querySelector("#right-share").addEventListener("click", showShareLink);
+
     socket = io.connect('http://' + document.location.hostname + ':' + (document.location.port || '80') + '/');
 
     // Display shareId
@@ -299,7 +301,7 @@
           <p>This will be the UI Popup.</p>
         </div>
         <div id="link-box">
-          <input type="text" value="loading..." size="100" onClick='select(this);'>
+          <input type="text" value="loading..." size="100" onClick="this.select();"/>
         </div>
         <div id="bff-container">
           <div id="bff">
@@ -315,11 +317,12 @@
       <!-- Message -->
       <div id="confirm-message-container">
         <div id="confirm-message">
-          <p>Player 1 would like to play Bubble Bobble!</p>
+          <p>Player 2 wants to play Bubble Bobble!</p>
         </div>
       </div>
 
       <!-- Confirm Button -->
+      <!--
       <div id="change-confirm-btn-container">
         <div class="change-confirm-button" id="change-confirm-btn">
           <p>Confirm</p>
@@ -328,8 +331,10 @@
           </div>
         </div>
       </div>
+      -->
 
       <!-- Deny Button -->
+      <!--
       <div id="change-deny-btn-container">
         <div class="change-confirm-button" id="change-deny-btn">
           <p>Deny</p>
@@ -338,6 +343,7 @@
           </div>
         </div>
       </div>
+      -->
 
     </div>
   </div>
