--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,7 +117,7 @@ div#nes p {
  /* Old TV Position Screen
   top: 36px;
   left: 7px;*/
-  z-index: 9999;
+  z-index: 4;
 }
 
 .nes-roms { display: none; }
@@ -296,8 +296,10 @@ div#ui-popup-container {
   background: url(/images/popup-bg.png) no-repeat;
   width: 335px;
   height: 200px;
-  margin: -30px auto;
+  margin: 0 auto;
   display: none;
+  position: relative;
+  z-index: 5;
 }
 
 div#ui-popup p {
@@ -312,6 +314,7 @@ div#link-box {
   border-radius: 5px;
   box-shadow: 0 1px 0 #5b5a5a;
   float: left;
+  cursor: pointer;
 }
 
 div#link-box input {
@@ -321,7 +324,6 @@ div#link-box input {
   height: 28px;
   font-family: arial, sans-serif;
   font-size: 1em;
-  text-indent: 10px;
   margin: 0 auto;
   /*margin: 20px 0 0 45px;*/
   box-shadow:inset 0 0 5px #000000;
@@ -373,11 +375,7 @@ div#bff-container {
   margin: 0 auto;
 }
 
-div#bff {
-
-}
-
-div#bff p {
+div#bff-container p {
   text-align: center;
   text-shadow: 0 2px 2px #000000;
   font-style: italic;
@@ -445,6 +443,7 @@ div#change-confirm-container {
   width: 100%;
   height: auto;
   margin-top: 40px;
+  display: none;
 }
 
 div#change-confirm {
