--- a/views/index.ejs
+++ b/views/index.ejs
@@ -368,7 +368,7 @@
           <input type="text" value="loading..." size="100" onClick="this.select();"/>
         </div>
         <div id="bff-container">
-            <p>Share this link with you BFF. Cause Nintendo is always better with a buddy.</p>
+            <p>Share this link with your BFF. Cause Nintendo is always better with a buddy.</p>
         </div>
       </div>
     </div>
